Adjusted all html pages to use the style of the index (getting started) page. Added content to the index page.

--- a/ChronoKeep/help/participants.html
+++ b/ChronoKeep/help/participants.html
@@ -7,90 +7,108 @@
         <title>Chronokeep - Getting Started</title>
     </head>
     <body>
-        <main class="d-flex flex-nowrap">
-            <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 280px;">
-                    <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                        <img class="bi pe-none me-2" src="icons/icon.png" width="40">
-                        <span class="fs-4">Chronokeep</span>
-                        </a>
-                    <hr>
-                    <ul class="nav nav-pills flex-column mb-auto">
-                        <li class="nav-item">
-                            <a href="index.html" class="nav-link link-body-emphasis" aria-current="page">
-                                <i class="bi bi-arrow-up-right-square pe-none me-w" width="16"></i>
-                                Getting Started
-                            </a>
-                        </li>
-                        <li>
-                            <a href="dashboard.html" class="nav-link link-body-emphasis">
-                                <i class="bi bi-house pe-none me-w" width="16"></i>
-                                Dashboard
-                            </a>
-                        </li>
-                        <li>
-                            <a href="timing.html" class="nav-link link-body-emphasis">
-                                <i class="bi bi-clipboard pe-none me-w" width="16"></i>
-                                Timing
-                            </a>
-                        </li>
-                        <li>
-                            <a href="announcer.html" class="nav-link link-body-emphasis">
-                                <i class="bi bi-bell pe-none me-w" width="16"></i>
-                                Announcer
-                            </a>
-                        </li>
-                        <li>
-                            <a href="participants.html" class="nav-link active">
-                                <i class="bi bi-person pe-none me-w" width="16"></i>
-                                Participants
-                            </a>
-                        </li>
-                        <li>
-                            <a href="chips.html" class="nav-link link-body-emphasis">
-                                <i class="bi bi-cpu pe-none me-w" width="16"></i>
-                                Chips
-                            </a>
-                        </li>
-                        <li>
-                            <a href="locations.html" class="nav-link link-body-emphasis">
-                                <i class="bi bi-map pe-none me-w" width="16"></i>
-                                Locations
-                            </a>
-                        </li>
-                        <li>
-                            <a href="distances.html" class="nav-link link-body-emphasis">
-                                <i class="bi bi-rulers pe-none me-w" width="16"></i>
-                                Distances
-                            </a>
-                        </li>
-                        <li>
-                            <a href="segments.html" class="nav-link link-body-emphasis">
-                                <i class="bi bi-chevron-bar-right pe-none me-w" width="16"></i>
-                                Segments
-                            </a>
-                        </li>
-                        <li>
-                            <a href="age-groups.html" class="nav-link link-body-emphasis">
-                                <i class="bi bi-trophy pe-none me-w" width="16"></i>
-                                Age Groups
-                            </a>
-                        </li>
-                        <li>
-                            <a href="settings.html" class="nav-link link-body-emphasis">
-                                <i class="bi bi-gear pe-none me-w" width="16"></i>
-                                Settings
-                            </a>
-                        </li>
-                        <li>
-                            <a href="about.html" class="nav-link link-body-emphasis">
-                                <i class="bi bi-question-circle pe-none me-w" width="16"></i>
-                                About
-                            </a>
-                        </li>
-                    </ul>
+        <header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow" data-bs-theme="dark">
+            <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 text-white" href="#"><img class="bi pe-none me-2" src="icons/icon.png" width="24">Chronokeep</a>
+            <ul class="navbar-nav flex-row d-md-none">
+                <li class="nav-item text-nowrap">
+                    <button class="nav-link px-3 text-white" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="bi bi-list pe-none me-w" width="16"></i>
+                    </button>
+                </li>
+            </ul>
+        </header>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="sidebar border border-right col-md-3 col-lg-2 p-0 bg-body-tertiary">
+                    <div class="offcanvas-md offcanvas-end bg-body-tertiary" tabindex="-1" id="sidebarMenu" aria-labelledby="sidebarMenuLabel">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="sidebarMenuLabel">Chronokeep</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#sidebarMenu" aria-label="Close"></button>
+                        </div>
+                        <div class="ckeep-nav offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
+                            <ul class="nav flex-column">
+                                <li class="nav-item">
+                                    <a href="index.html" class="nav-link d-flex align-items-center gap-2 link-body-emphasis" aria-current="page">
+                                        <i class="bi bi-arrow-up-right-square pe-none me-w" width="16"></i>
+                                        Getting Started
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="dashboard.html" class="nav-link d-flex align-items-center gap-2 link-body-emphasis">
+                                        <i class="bi bi-house pe-none me-w" width="16"></i>
+                                        Dashboard
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="timing.html" class="nav-link d-flex align-items-center gap-2 link-body-emphasis">
+                                        <i class="bi bi-clipboard pe-none me-w" width="16"></i>
+                                        Timing
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="announcer.html" class="nav-link d-flex align-items-center gap-2 link-body-emphasis">
+                                        <i class="bi bi-bell pe-none me-w" width="16"></i>
+                                        Announcer
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="participants.html" class="nav-link d-flex align-items-center gap-2 active">
+                                        <i class="bi bi-person pe-none me-w" width="16"></i>
+                                        Participants
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="chips.html" class="nav-link d-flex align-items-center gap-2 link-body-emphasis">
+                                        <i class="bi bi-cpu pe-none me-w" width="16"></i>
+                                        Chips
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="locations.html" class="nav-link d-flex align-items-center gap-2 link-body-emphasis">
+                                        <i class="bi bi-map pe-none me-w" width="16"></i>
+                                        Locations
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="distances.html" class="nav-link d-flex align-items-center gap-2 link-body-emphasis">
+                                        <i class="bi bi-rulers pe-none me-w" width="16"></i>
+                                        Distances
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="segments.html" class="nav-link d-flex align-items-center gap-2 link-body-emphasis">
+                                        <i class="bi bi-chevron-bar-right pe-none me-w" width="16"></i>
+                                        Segments
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="age-groups.html" class="nav-link d-flex align-items-center gap-2 link-body-emphasis">
+                                        <i class="bi bi-trophy pe-none me-w" width="16"></i>
+                                        Age Groups
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="settings.html" class="nav-link d-flex align-items-center gap-2 link-body-emphasis">
+                                        <i class="bi bi-gear pe-none me-w" width="16"></i>
+                                        Settings
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="about.html" class="nav-link d-flex align-items-center gap-2 link-body-emphasis">
+                                        <i class="bi bi-question-circle pe-none me-w" width="16"></i>
+                                        About
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+                    <div class="chrono-container container-fluid">
+                        <h1>This documentation is a work in progress. This page is not yet completed.</h1>
+                    </div>
+                </main>
             </div>
-        </main>
-        <script type="text/javascript" src='js/jquery.min.js'></script>
-        <script type="text/javascript" src='js/bootstrap.min.js'></script>
+        </div>
     </body>
 </html>
