--- a/ChronoKeep/help/index.html
+++ b/ChronoKeep/help/index.html
@@ -107,11 +107,11 @@
                     <div class="chrono-container container-fluid">
                         <h1 class="text-center">Getting Started!</h1>
                         <hr>
-                        <div>The navigation bar to the right will take you to a page detailing all of the information needed to use every feature of this program.  Below you will find a short guide meant to introduce the user to the essential features required to use the software to time a race.</div>
+                        <div>The navigation bar to the right will take you to pages detailing all of the information needed to use every feature of this program. Below you will find a short guide meant to introduce the user to the essential features required to use the software.</div>
                         <hr>
                         <h3 class="text-center">Quick Start</h3>
                         <div class="row justify-content-center">
-                            <p>When opening the program for the first time you will find yourself on the Dashboard page with no event selected.  If you've already got an event created, you will see information about that event.  Below are examples of each of these states.</p>
+                            <p>When opening the program for the first time you will find yourself on the Dashboard page with no event selected. If you already have an event created, you will see information about that event. Below are examples of each of these states.</p>
                             <a class="col-md-5 mb-3" data-bs-toggle="modal" data-bs-target="#dashboard-empty">
                                 <img class="img-fluid" alt="empty dashboard" src="images/Dashboard-Empty.png">
                             </a>
@@ -138,7 +138,7 @@
                             </div>
                         </div>
                         <div class="row justify-content-center">
-                            <p>To start, create a new event by clicking new event.  Input the event name, a year-code (typically the year, unless you've got multiples of the same event in a year, in which case you'd use something like 2001-1 and 2001-2) as well as the date the event starts. If necessary, you can copy information from an old event.  This copies distances, age groups, segments, location information, and event information.</p>
+                            <p>To start, create a new event by clicking new event. Input the event name, a year-code (typically the year, unless you've got multiples of the same event in a year, in which case you'd use something like 2001-1 and 2001-2) as well as the date the event starts. If necessary, you can copy information from an old event. This copies distances, age groups, segments, location information, and event information.</p>
                             <a class="col-sm-4 mb-3" data-bs-toggle="modal" data-bs-target="#new-event">
                                 <img class="img-fluid" alt="new event window" src="images/New-Event.png">
                             </a>
@@ -153,10 +153,10 @@
                             </div>
                         </div>
                         <div class="row justify-content-center">
-                            <p>Most events are going to be distance based (Marathons, 5k, etc).  Should you need another type of event, click edit and select the event type from the dropdown.  Time based events would be a 12 hour event, whereas a Backyard Ultra is an event where each runner must complete a certain distance in a time period and they keep going until there is only one runner left.  Support for Backyard Ultras is currently in a beta state.</p>
+                            <p>Most events are going to be distance based (Marathons, 5k, etc). Should you need another type of event, click edit and select the event type from the dropdown. Time based events would be a 12 hour event, whereas a Backyard Ultra is an event where each runner must complete a certain distance in a time period and they keep going until there is only one runner left. Support for Backyard Ultras is currently in a beta state.</p>
                         </div>
                         <div class="row justify-content-center">
-                            <p>To upload results to the internet, you must set up an API connected. Click Manage API to add api information.  Uploading of results to the internet requires a Chronokeep Results API Key from a self-hosted solution or the the Chronokeep hosted API.  To upload/download reads from a remote reader set up a self-hosted or chronokeep hosted Remote API.  Once you have the results set up you can link the event to the API.  Select the API you want to upload to on the first page.  The next page will link it to an existing event or create a new event.  The last will do the same for the year.</p>
+                            <p>To upload results to the internet, you must input information for the API you wish to use. Click Manage API to add api information. Uploading of results to the internet requires a Chronokeep Results API Key from a self-hosted solution or the the Chronokeep hosted API. To upload/download reads from a remote reader set up a self-hosted or chronokeep hosted Remote API. Once you have the results set up you can link the event to the API. Select the API you want to upload to on the first page. The next page will link it to an existing event or create a new event. The last will do the same for the year.</p>
                             <a class="col-md-4 mb-3" data-bs-toggle="modal" data-bs-target="#manage-api">
                                 <img class="img-fluid" alt="manage api page" src="images/Manage-API.png">
                             </a>
@@ -222,7 +222,7 @@
                             </div>
                         </div>
                         <div class="row justify-content-center">
-                            <p>There are a few fields that are required (First Name, Last Name, Age/DOB, Bib). Should you want to keep a runner's information secret when uploading to a results page, make sure to select anonymous for the field as required. Any value found there indicates the person should be anonymous. The next page will allow you to link distances from the import information to distances already in the system. Auto will automatically match distance names or create distances if the name doesn't exist. Most of the time this is the final page you see. If there are errors with the import page you will see another screen detailing multiples or conflicts. This page will allow you to select which (or both) entries you want to keep.</p>
+                            <p>There are a few fields that are required (First Name, Last Name, Age/DOB, Bib). Should you want to keep a runner's information secret when uploading to a results page, make sure to select anonymous for the field as required. Any value found in this column indicates the person should be anonymous. The next page will allow you to link distances from the import information to distances already in the system. Auto will automatically match distance names or create distances if the name doesn't exist. Most of the time this is the final page you see. If there are errors with the import page you will see another screen detailing multiples or conflicts. This page will allow you to select which (or both) entries you want to keep.</p>
                             <a class="col-sm-4 mb-3" data-bs-toggle="modal" data-bs-target="#import-first">
                                 <img class="img-fluid" alt="import participants window headers" src="images/Import-First.png">
                             </a>
@@ -261,7 +261,7 @@
                             </div>
                         </div>
                         <div class="row justify-content-center">
-                            <p>Now go to the chips page. Here you will assign chip values to the bibs. If your chips are base 10 (0,1,2,3,4,5,6,7,8,9) make sure Dec is selected at the top. If they're base 16 (0,1,2,3,4,5,6,7,8,9,A,B,C,D,E,F) select Hex. If you already have this information in a spreadsheet you can import it. Otherwise the easiest way to do this is to assign a range. Input the low end of the bib range, then the high end. Input the low end of the chips and the high end is automatically entered. Save the range and the values are automatically updated. If you have non-numerical bibs you cannot use the Assign Range feature.</p>
+                            <p>Now go to the chips page. Here you will assign chip values to the bibs. If your chips are base 10 (Numbers with digits 0,1,2,3,4,5,6,7,8,9) make sure Dec is selected at the top. If they're base 16 (Numbers with digits 0,1,2,3,4,5,6,7,8,9,A,B,C,D,E,F) select Hex. If you already have this information in a spreadsheet you can import it. Otherwise the easiest way to do this is to assign a range. Input the low end of the bib range, then the high end. Input the low end of the chips and the high end is automatically entered. Save the range and the values are automatically updated. If you have non-numerical bibs you cannot use the Assign Range feature.</p>
                             <a class="col-md-6 mb-3" data-bs-toggle="modal" data-bs-target="#chips">
                                 <img class="img-fluid" alt="chips page" src="images/Chips.png">
                             </a>
@@ -276,7 +276,7 @@
                             </div>
                         </div>
                         <div class="row justify-content-center">
-                            <p>Now set up Locations. If you've got remote readers set up locations for these. If not, adjust the Start Window (the period after the event starts where chip reads will be counted as start times and not finish/segment times at the start location) and the ignore within (the time period at the location where reads will not be counted as new result values) values. Adjust the Max Occurrences (the number of times the location should be crossed for any given event, if your event has one distance that crosses the location 3 times and another that crosses it only once, set this to 3) value if the event is a distance based event.</p>
+                            <p>Now set up Locations. If you've got remote readers set up locations for these. Adjust the Start Window (the period after the event starts where chip reads will be counted as start times and not finish/segment times at the start location) and the ignore within (the time period at the location where reads will not be counted as new result values) values. Adjust the Max Occurrences (the number of times the location should be crossed for any given event, if your event has one distance that crosses the location 3 times and another that crosses it only once, set this to 3) value if the event is a distance based event.</p>
                             <a class="col-md-6 mb-3" data-bs-toggle="modal" data-bs-target="#locations-distance">
                                 <img class="img-fluid" alt="distance based locations page" src="images/Locations-Distance.png">
                             </a>
@@ -330,7 +330,7 @@
                             </div>
                         </div>
                         <div class="row justify-content-center">
-                            <p>Segments are used for giving names to where a runner is after crossing a location for the X time. The distance value is useful when multiple locations are available to ensure runners are counted at the right segment.</p>
+                            <p>Segments are used for giving names to where a runner is after crossing a location for the X'th time. The distance value is useful when multiple locations are available to ensure runners are counted at the right segment.</p>
                             <a class="col-md-6 mb-3" data-bs-toggle="modal" data-bs-target="#segments">
                                 <img class="img-fluid" alt="segments page" src="images/Segments.png">
                             </a>
@@ -360,7 +360,7 @@
                             </div>
                         </div>
                         <div class="row justify-content-center">
-                            <p>Pre-race setup is now complete. Go to the timing page and connect to your reader. Mostly this means changing the type to the correct type of timing system as well as setting the IP address correctly. The IP address box is the field to the right of the reader type dropdown. To connect click the play button. Once connected it is usually a good idea to set the time of the system to the computer's time. To do so click the button with the clock on it. Click set now to set the clock. This will display the system time and your computer time if successful. You can also check the current clock of the system by clicking the get time button. At this point you should start your timing system reading. This may already be done automatically or might need to be done manually. It is a good idea to ensure that it is correctly working before the event starts though.</p>
+                            <p>Pre-race setup is now complete. Go to the timing page and connect to your reader. Mostly this means changing the type to the correct type of timing system as well as setting the IP address correctly. The IP address box is the field to the right of the reader type dropdown. To connect click the play button. Once connected it is usually a good idea to set the time of the system to the computer's time. To do so click the button with the clock on it. Click set now to set the clock. This will display the system time and your computer time if successful. You can also check the current clock of the system by clicking the get time button. At this point you should start your timing system reading. This may already be done automatically or might need to be done manually. It is a good idea to ensure that it is correctly working before the event starts.</p>
                             <a class="col-md-6 mb-3" data-bs-toggle="modal" data-bs-target="#timing-default">
                                 <img class="img-fluid" alt="timing page" src="images/Timing-Default.png">
                             </a>
